--- a/template.css
+++ b/template.css
@@ -1,5 +1,5 @@
 * {
-  background-color: pink;
+  background-color: #f2f2f2;
 }
 
 /* Header edits */
@@ -7,34 +7,6 @@
   border: 5px solid black;
   border-radius: 1rem;
 }
-
-.row {
-  display: flex;
-}
-
-.Primary__title {
-  margin-left: 1rem;
-}
-
-.Secondary__title {
-}
-
-.phone,
-.sub-text,
-.icon {
-  margin: 0 auto;
-  margin-left: 5rem;
-  text-align: center;
-  align-items: center;
-}
-
-.phone {
-  margin-top: 1rem;
-}
-.sub-text {
-  padding-left: 6rem;
-}
-.icon {
-  margin-top: 5rem;
-  /* margin-right: 1rem; */
+.navbar {
+  color: black;
 }
