--- a/template.css
+++ b/template.css
@@ -1,4 +1,4 @@
-* {
+body {
   background-color: #f2f2f2;
 }
 
@@ -31,7 +31,22 @@
 
 .carousel-image {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1800px;
+  height: 70%;
+  max-height: 625px;
+  object-fit: fill;
+  align-items: right;
+}
+
+.caption-change-1 {
+  margin-bottom: 33rem;
+}
+
+.caption-change-2,
+.caption-change-3 {
+  margin-bottom: 26rem;
+
+  background-color: transparent;
 }
 
 /* card */
