--- a/template.css
+++ b/template.css
@@ -23,11 +23,11 @@ body {
   color: black;
 }
 
-.carousel-inner,
+/* .carousel-inner,
 .carousel-item {
   width: 100%;
   height: auto;
-}
+} */
 
 .carousel-image {
   width: 100%;
@@ -54,6 +54,13 @@ body {
   width: 40%;
   height: auto;
   justify-content: center;
+}
+
+/* section */
+.section_image {
+  width: 400px;
+  height: auto;
+  margin-bottom: 2rem;
 }
 
 /* footer */
